k8s_templates/practice-deployment-v3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-practice-prj-deployment-autoscale
  labels:
    app: docker-practice-prj
    env: dev
    owner: jwoliv
spec:
  replicas: 4
  selector:
    matchLabels:
      app: docker-practice-prj-autoscale
  template:
    metadata:
        labels:
          app: docker-practice-prj-autoscale
    spec:
      containers:
        - name: docker-practice-prj-container
          image: jwoliv/docker-practice-prj:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
