k8s_templates/practice-service-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-practice-prj-deployment-autoscale
  labels:
    app: docker-practice-prj
    env: dev
    owner: jwoliv
spec:
  replicas: 4
  selector:
    matchLabels:
      app: docker-practice-prj-autoscale
  template:
    metadata:
        labels:
          app: docker-practice-prj-autoscale
    spec:
      containers:
        - name: docker-practice-prj-container
          image: jwoliv/docker-practice-prj:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name:  docker-practice-prj-service
spec:
  selector:
    app:  docker-practice-prj-autoscale
  type:  LoadBalancer
  ports:
  - name: docker-practice-prj-port
    port:  9999
    targetPort: 8080
  - name: nginx-port
    port: 9000
    targetPort: 80
